ci: --illegal-access=permit was removed in Java 17
this fixes warning

OpenJDK 64-Bit Server VM warning: Ignoring option --illegal-access=permit; support was removed in 17.0

printed when executing tests.